update brand, category, login with google, upload image